force-app/main/default/objects/Quiz_Report__c/Quiz_Report__c.object-meta.xml
<CustomObject>
    <label>Quiz Report</label>
    <nameField>
        <displayFormat>QR-{0000}</displayFormat>
        <label>Quiz Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>