force-app/main/default/objects/Quiz_Report__c/fields/Is_Passed__c.field-meta.xml
<CustomField>
    <fullName>Is_Passed__c</fullName>
    <formula>IF(User_Score__c &gt;= Quiz_Threshold__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Passed</label>
    <type>Checkbox</type>
</CustomField>