force-app/main/default/objects/Quiz_Report__c/fields/Quiz_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Threshold__c</fullName>
    <label>Quiz Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>