force-app/main/default/objects/Quiz_Report__c/fields/Time_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Time_Seconds__c</fullName>
    <label>Time Seconds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>