force-app/main/default/objects/Quiz_Report__c/fields/User_Score__c.field-meta.xml
<CustomField>
    <fullName>User_Score__c</fullName>
    <label>User Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>